Refactor compare-bar-header to synergy bar. Overflow not yet working.

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -166,7 +166,7 @@ a:hover {
     }
 
     // Hide the special offer tabs
-    .compare-hospitals-header,
+    .synergy-bar,
     #hc_modal_mobile_special_offer_tab_trigger {
         max-height: 0 !important;
         padding: 0 !important;
