--- a/resources/sass/mobile/components/_solutionsMobile.scss
+++ b/resources/sass/mobile/components/_solutionsMobile.scss
@@ -7,7 +7,7 @@
 //    z-index: 1040;
 //    max-height: calc(100vh - 140px);
 //
-//    .compare-hospitals-header {
+//    .synergy-bar {
 //        position: relative;
 //        //width: 100%;
 //        //margin: 0 auto;
