--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,11 +14,7 @@
 // Bootstrap select picker
 @import '~bootstrap-select/sass/bootstrap-select';
 
-// Bootstrap slider
-//@import '~bootstrap-slider/dist/css/bootstrap-slider.css';
-
 // Cookie consent
-// https://github.com/osano/cookieconsent
 @import '~cookieconsent/build/cookieconsent.min.css';
 
 // Font-awesome
@@ -58,10 +54,10 @@
 @import 'components/logo';
 @import 'components/pagination';
 @import 'components/solutions';
+@import 'components/synergy';
 //@import 'mobile/components/solutionsMobile';
 @import 'components/form';
 @import 'components/accordion';
-//@import 'components/doctor';
 @import 'components/modal';
 
 // BASIC COMPONENTS
