Overflow on tabs - to keep corners rounded.

--- a/resources/sass/components/_synergy.scss
+++ b/resources/sass/components/_synergy.scss
@@ -51,6 +51,7 @@
     }
 
     .special-offer-tab {
+        overflow: hidden; // to keep corners rounded
         width: 250px;
         @include media-breakpoint-up(md) {
             width: 365px;
