--- a/resources/sass/components/_synergy.scss
+++ b/resources/sass/components/_synergy.scss
@@ -148,63 +148,6 @@
         }
     }
 
-    .compare-button-title {
-        //background-color: #535353;
-        cursor: pointer;
-
-        svg { // #compare_heart
-            width: 30px;
-            height: 30px;
-            overflow: visible;
-            margin-right: 10px;
-            transition: $transition;
-            transform-origin: 50% 50%;
-
-            #wishlist {
-                stroke: #fff;
-                stroke-width: 1px;
-            }
-
-            &.has-count {
-                transform-origin: 50% 50%;
-
-                #outer-circle {
-                    transform-origin: 50% 50%;
-                    animation: heartBeat .5s ease-in-out 0.1s;
-                    animation-fill-mode: forwards;
-                    animation-iteration-count: 2;
-                }
-
-                // The inner heart
-                #wishlist {
-                    transform-origin: 50% 50%;
-                    animation: heartBeat .5s ease-in-out;
-                    animation-fill-mode: forwards;
-                    animation-iteration-count: 2;
-                }
-            }
-
-            &.active {
-                #wishlist { // The inner heart path
-                    fill: $pink;
-                    stroke: $pink;
-                }
-            }
-        }
-
-        p {
-            margin: 0;
-            color: $white;
-            @include font-size(20);
-            line-height: 1;
-        }
-    }
-
-    #compare_number {
-        display: inline-block;
-        min-width: 10px;
-        text-align: center;
-    }
 
     .compare-arrow {
         display: inline-block;
@@ -224,4 +167,61 @@
     .synergy-tab-list {
         bottom: 15px;
     }
+}
+
+
+.compare-button-title {
+    //background-color: #535353;
+    cursor: pointer;
+
+    svg { // #compare_heart
+        width: 18px;
+        height: 18px;
+        overflow: visible;
+        margin-right: 5px;
+        transition: $transition;
+        transform-origin: 50% 50%;
+
+        #wishlist {
+            //stroke: #757575;
+            //stroke-width: 1px;
+        }
+
+        &.has-count {
+            transform-origin: 50% 50%;
+
+            #outer-circle {
+                transform-origin: 50% 50%;
+                animation: heartBeat .5s ease-in-out 0.1s;
+                animation-fill-mode: forwards;
+                animation-iteration-count: 2;
+            }
+
+            // The inner heart
+            #wishlist {
+                transform-origin: 50% 50%;
+                animation: heartBeat .5s ease-in-out;
+                animation-fill-mode: forwards;
+                animation-iteration-count: 2;
+            }
+        }
+
+        &.active {
+            #wishlist { // The inner heart path
+                fill: $pink;
+                stroke: $pink;
+            }
+        }
+    }
+
+    p {
+        margin: 0;
+        line-height: 1;
+    }
+}
+
+#compare_number {
+    display: inline-block;
+    min-width: 10px;
+    text-align: center;
 }
