Fix select dropdown on results page form. Reinstate hc-backdrop when filters-open.

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -165,7 +165,7 @@
 
             #input_postcode,
             .dropdown-toggle {
-                padding: 13px 40px 13px 13px;
+                padding: 13px 40px 13px 13px !important;
             }
 
             .bootstrap-select + .black-chevron {
