--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -144,7 +144,7 @@ a:hover {
     //    display: block !important;
     //}
 
-    &:before {
+    .hc-backdrop {
         opacity: 0.5 !important;
         z-index: 10;
     }
