Add new xxl breakpoint

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,7 +19,15 @@ $letter-spacing: 0em;
 // Borders
 $border-radius: 3px;
 
-
+// Grid breakpoints
+$grid-breakpoints: (
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1440px
+);
 
 // 2020 new brand colours. Old turquoise = #00cecd
 // Primary colours
