--- a/resources/sass/components/_synergy.scss
+++ b/resources/sass/components/_synergy.scss
@@ -208,16 +208,10 @@
 
     // apply animation
     &.has-count {
-        #compare_number,
-        #count_badge {
-            transform-origin: 50% 50%;
-            animation: heartBeat .5s ease-in-out 0.1s;
-            animation-fill-mode: forwards;
-            animation-iteration-count: 2;
-        }
+
     }
 
-    // fill the heart if there are items added
+    // class added if there are items in the shorlist
     &.active {
         #wishlist { // The inner heart path
             fill: $trunkie;
@@ -232,6 +226,15 @@
 
         #compare_number {
             display: inline-block;
+        }
+
+        // fill the heart if there are items added
+        #compare_number,
+        #count_badge {
+            transform-origin: 50% 50%;
+            animation: heartBeat .5s ease-in-out 0.1s;
+            animation-fill-mode: forwards;
+            animation-iteration-count: 2;
         }
     }
 }
