--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -112,6 +112,7 @@ $popover-max-width: 500px;
 $modal-inner-padding: 0;
 $modal-content-border-radius: $border-radius;
 $modal-content-border-width: 0;
+$modal-dialog-margin: 1rem; // Spacing around modal - stop it hitting edge of browser
 $zindex-modal-backdrop: 1080;
 $zindex-modal: 1085;
 
