--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -39,7 +39,7 @@ $brand-primary-4: #18435a; // navy ish blue
 $brand-primary-5: #037098; // lilac
 $brand-primary-6: #de026d; // hot pink
 $brand-primary-7: #0d69f2; // original blue
-$blue: $brand-primary-7;   // to override BS default blue
+$blue: $brand-primary-7; // to override BS default blue
 
 // Secondary colours
 $brand-secondary-1: #00cfcc; // cyan
@@ -109,6 +109,10 @@ $popover-arrow-color: #fff;
 $popover-max-width: 500px;
 
 // Modal
+//$modal-xl:                          1140px !default;
+//$modal-lg:                          800px !default;
+//$modal-md: 500px;
+//$modal-sm:                          300px !default;
 $modal-inner-padding: 0;
 $modal-content-border-radius: $border-radius;
 $modal-content-border-width: 0;
@@ -195,7 +199,6 @@ $paginationColor: #595959;
 $paginationDisabledColor: #C0C0C0;
 
 
-
 // Box shadows
 $box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 
@@ -205,8 +208,8 @@ $pink-tick-size: 15px;
 
 // Cards
 
-$card-spacer-y:                     2rem;
-$card-spacer-x:                     1.25rem !default;
+$card-spacer-y: 2rem;
+$card-spacer-x: 1.25rem !default;
 
 // Header
 $mobile-header-height: 60px;
