--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -13,7 +13,9 @@
 
         .modal-dialog {
             //width: 100%;
-            max-width: 820px;
+            @include media-breakpoint-up(lg) {
+                max-width: 820px;
+            }
         }
 
         .col-inner {
@@ -99,7 +101,9 @@
     &.modal-tour {
         .modal-dialog {
             margin-top: 100px;
-            max-width: 890px;
+            @include media-breakpoint-up(lg) {
+                max-width: 890px;
+            }
         }
 
         .modal-content {
