Fixes for: https://trello.com/c/mgLK63NC/97-re-sticky-the-sort-bar-when-closing-the-shortlist

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -48,10 +48,10 @@ body {
     &.results-page {
         overflow: hidden; // Stop body scrolling
 
-        #resultspage_form {
-            z-index: initial;
-            //position: static !important;
-        }
+        //#resultspage_form {
+        //    z-index: initial;
+        //    //position: static !important;
+        //}
 
         // Fade in the mask when shortlist is open
         .hc-backdrop {
