--- a/resources/sass/components/_synergy.scss
+++ b/resources/sass/components/_synergy.scss
@@ -64,8 +64,7 @@
         min-height: 0;
         transition: min-height ease 0.4s, background-position ease 0.3s;
 
-        &.private-hospital__offer,
-        &.pink__offer {
+        &.ad_pink {
             background-image: linear-gradient(266deg, #ed0373, #fd409d);
         }
 
@@ -78,8 +77,8 @@
             padding: 13px;
             height: 72px;
 
-            .offer-text {
-                .offer-title {
+            .ad-block-header-text {
+                .ad-block-header-title {
                     @include font-size(17);
                     line-height: 23px;
 
