Desktop consultants table built and styled up.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -216,3 +216,7 @@ $mobile-header-height: 60px;
 
 // Mobile sort/filter bar buttons
 $mobileSortbarButtonHeight: 40px;
+
+// Table colours for consultants table
+$table-header-color: #cde2ea;
+$table-body-color: #f0f0f0;
