--- a/resources/sass/pages/pagesections/_corporateContent.scss
+++ b/resources/sass/pages/pagesections/_corporateContent.scss
@@ -1,6 +1,6 @@
 .results-page {
     .corporate-content {
-        display: none;
+        //display: none;
     }
 }
 
@@ -184,7 +184,7 @@
     z-index: 1;
     margin: auto;
     overflow: auto;
-    height: 350px;
+    //height: 350px;
 }
 
 .table-scroll {
