Dynamic ratings in ResultItem.js

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,7 +40,7 @@
 @import 'pages/faqsPage';
 @import 'pages/yourRights';
 @import 'pages/aboutUs';
-@import 'pages/404';
+//@import 'pages/404';
 
 // PAGE SECTION
 @import 'pages/pagesections/howSection';
